# my-notebook

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  设计文档-tauri.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_content.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  jira.rs  lib.rs  link_parser.rs  main.rs  proxy.rs  tray.rs
src-tauri/src-tauri/tests/: fs_copy_open_test.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: file_cache.rs  folders.rs  mod.rs  models.rs  notes.rs  schema.rs  settings.rs  week_tasks.rs  weekly_report.rs
src-tauri/src/mcp/: mod.rs
src/api/: files.ts  folders.ts  jira.ts  notes.ts  proxy.ts  search.ts  settings.ts  storage.ts  week_tasks.ts
src/components/: Shell.tsx  branch-chip.tsx  copy-week-dialog.tsx  file-preview-panel.tsx  import-jira-dialog.tsx  linear-status-icon.tsx  markdown-content.tsx  note-editor.tsx  note-list-pane.tsx  search-dialog.tsx  sidebar.tsx  status-badge.tsx  task-edit-dialog.tsx  task-no-link.tsx  task-table-view.tsx  week-selector.tsx
src/hooks/: useFiles.ts  useFolders.ts  useNotes.ts  useSearch.ts  useSettings.ts  useStorage.ts  useWeekTasks.ts
src/lib/: autolink.ts  excel-render.ts  jira-import.ts
src/pages/: FilePreview.tsx  Notes.tsx  Settings.tsx  TaskDetail.tsx  WeekTasks.tsx
src/router/: index.tsx
src/styles/: globals.css
src/types/: files.ts  jira.ts  note.ts  search.ts  (+3 more)
(+11 files in other folders)
