[package]
name = "jilu"
version = "1.0.0"
description = "记录 — 本地笔记工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "jilu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Utils
chrono = { version = "0.4", features = ["serde"] }

# 代理抓取（Jira 图片 / SVN 文件，按域名带认证；容忍自签证书）
reqwest = { version = "0.12", features = ["blocking"] }
base64 = "0.22"
